--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,16 @@
 name: Kernel Build
 
 on:
+  pull_request:
+    types: [closed]
+    branches:
+      - v*
+      - flavor/*/v*
   workflow_dispatch:
-#  schedule:
-#    - cron: 0 8 * * 5
 
 env:
   REPO_URL: https://github.com/fw867/pve-edge-kernel.git
-  REPO_BRANCH: master
+  REPO_BRANCH: v5.17.x
   CONFIG_FILE: .config
   SSH_ACTIONS: false
   UPLOAD_BIN_DIR: true
@@ -16,7 +19,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.event.repository.owner.id == github.event.sender.id
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event.pull_request.merged == true }}
     steps:
     - name: Checkout
       uses: actions/checkout@master
@@ -33,7 +36,7 @@ jobs:
 
     - name: Clone source code
       run: |
-        git clone $REPO_URL
+        git clone $REPO_URL -b $REPO_BRANCH
         cd pve-edge-kernel
         git submodule update --init --depth=1 --recursive linux
         git submodule update --init --recursive
@@ -42,7 +45,7 @@ jobs:
       id: compile
       run: |
         cd pve-edge-kernel
-        scripts/update.sh -t linux-5.17.y
+        #scripts/update.sh -t linux-5.17.y
         debian/rules debian/control
         sudo mk-build-deps -i
         debuild -ePVE* --jobs=auto -b -uc -us
