--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -23,7 +23,10 @@ jobs:
       with:
           submodules: recursive
     - name: Setup System Dependencies
-      run: sudo apt install devscripts
+      run: |
+        sudo sed -i 's/azure.archive.ubuntu.com/archive.ubuntu.com/g' /etc/apt/sources.list
+        sudo apt update
+        sudo apt install devscripts       
     - name: Update Kernel
       id: update
       run: |
