--- a/debian/templates/control.in
+++ b/debian/templates/control.in
@@ -21,6 +21,7 @@ Build-Depends: asciidoc,
                libssl-dev,
                lz4,
                python3-minimal,
+               python3-dev,
                quilt,
                rsync,
                xmlto,
