--- a/.github/workflows/watch.yml
+++ b/.github/workflows/watch.yml
@@ -1,9 +1,9 @@
 name: Kernel Watch
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: '0 11 * * *' # Every day
+#  workflow_dispatch:
+#  schedule:
+#    - cron: '0 11 * * *' # Every day
 
 jobs:
   check:
